# rpi-pico-debug

./: .gitignore  CMakeLists.txt  README.md
src/: app.c
