cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(app_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(app
  src/app.c
)

pico_enable_stdio_usb(app 1)
pico_enable_stdio_uart(app 1)
pico_add_extra_outputs(app)
target_link_libraries(app pico_stdlib)